src/test/ui/rfc-2008-non-exhaustive/enum.stderr
error[E0004]: non-exhaustive patterns: type `EmptyNonExhaustiveEnum` is non-empty
  --> $DIR/enum.rs:7:11
   |
LL |     match x {}
   |           ^
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms
   = note: the matched value is of type `EmptyNonExhaustiveEnum`, which is marked as non-exhaustive

error[E0004]: non-exhaustive patterns: `_` not covered
  --> $DIR/enum.rs:16:11
   |
LL |     match enum_unit {
   |           ^^^^^^^^^ pattern `_` not covered
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms
   = note: the matched value is of type `NonExhaustiveEnum`, which is marked as non-exhaustive

error[E0004]: non-exhaustive patterns: `_` not covered
  --> $DIR/enum.rs:23:11
   |
LL |     match enum_unit {};
   |           ^^^^^^^^^ pattern `_` not covered
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms
   = note: the matched value is of type `NonExhaustiveEnum`, which is marked as non-exhaustive

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0004`.
